log
Wed 24 Apr 2024 09:42:17 PM UTC: 
 tests:  0|6
total_score: 0/70
603caae
Wed 24 Apr 2024 09:56:31 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:44:7: error: unused variable ‘pos’ [-Werror=unused-variable]
   44 |   int pos = hash(key, map->capacity);
      |       ^~~
cc1: all warnings being treated as errors
Compilation failed
2fd1f95
Wed 24 Apr 2024 10:07:20 PM UTC: 
 hashmap.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:14: error: invalid initializer
   45 |   Pair par = createPair(key, value);
      |              ^~~~~~~~~~
hashmap.c:47:59: error: comparison between pointer and integer [-Werror]
   47 |   if (map->buckets[pos] == NULL || map->buckets[pos]->key == -1){
      |                                                           ^~
cc1: all warnings being treated as errors
Compilation failed
a084263
Wed 24 Apr 2024 10:09:40 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:14: error: invalid initializer
   45 |   Pair par = createPair(key, value);
      |              ^~~~~~~~~~
hashmap.c:47:59: error: comparison between pointer and integer [-Werror]
   47 |   if (map->buckets[pos] == NULL || map->buckets[pos]->key == -1){
      |                                                           ^~
hashmap.c: In function ‘createMap’:
hashmap.c:64:12: error: expected identifier or ‘(’ before ‘->’ token
   64 |     HashMap->capacity = capacity;
      |            ^~
hashmap.c:65:1: error: control reaches end of non-void function [-Werror=return-type]
   65 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
4b9af42
Wed 24 Apr 2024 10:10:03 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:14: error: invalid initializer
   45 |   Pair par = createPair(key, value);
      |              ^~~~~~~~~~
hashmap.c:47:59: error: comparison between pointer and integer [-Werror]
   47 |   if (map->buckets[pos] == NULL || map->buckets[pos]->key == -1){
      |                                                           ^~
hashmap.c: In function ‘createMap’:
hashmap.c:64:12: error: expected identifier or ‘(’ before ‘->’ token
   64 |     HashMap->capacity = capacity;
      |            ^~
hashmap.c:65:10: error: returning ‘long int’ from a function with return type ‘HashMap *’ {aka ‘struct HashMap *’} makes pointer from integer without a cast [-Werror=int-conversion]
   65 |   return capacity;
      |          ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
34220d0
Wed 24 Apr 2024 10:15:07 PM UTC: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:14: error: invalid initializer
   45 |   Pair par = createPair(key, value);
      |              ^~~~~~~~~~
hashmap.c:47:59: error: comparison between pointer and integer [-Werror]
   47 |   if (map->buckets[pos] == NULL || map->buckets[pos]->key == -1){
      |                                                           ^~
hashmap.c: In function ‘createMap’:
hashmap.c:66:10: error: incompatible types when returning type ‘HashMap’ {aka ‘struct HashMap’} but ‘HashMap *’ {aka ‘struct HashMap *’} was expected
   66 |   return mapa;
      |          ^~~~
hashmap.c:67:1: error: control reaches end of non-void function [-Werror=return-type]
   67 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1d46aad
Wed 24 Apr 2024 10:15:19 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:14: error: invalid initializer
   45 |   Pair par = createPair(key, value);
      |              ^~~~~~~~~~
hashmap.c:47:59: error: comparison between pointer and integer [-Werror]
   47 |   if (map->buckets[pos] == NULL || map->buckets[pos]->key == -1){
      |                                                           ^~
hashmap.c: In function ‘createMap’:
hashmap.c:66:14: error: returning ‘long int’ from a function with return type ‘HashMap *’ {aka ‘struct HashMap *’} makes pointer from integer without a cast [-Werror=int-conversion]
   66 |   return mapa.capacity;
      |          ~~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c380fba
Wed 24 Apr 2024 10:15:26 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:14: error: invalid initializer
   45 |   Pair par = createPair(key, value);
      |              ^~~~~~~~~~
hashmap.c:47:59: error: comparison between pointer and integer [-Werror]
   47 |   if (map->buckets[pos] == NULL || map->buckets[pos]->key == -1){
      |                                                           ^~
hashmap.c: In function ‘createMap’:
hashmap.c:66:14: error: invalid type argument of ‘->’ (have ‘HashMap’ {aka ‘struct HashMap’})
   66 |   return mapa->capacity;
      |              ^~
hashmap.c:67:1: error: control reaches end of non-void function [-Werror=return-type]
   67 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
fa8614c
Wed 24 Apr 2024 10:15:34 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:14: error: invalid initializer
   45 |   Pair par = createPair(key, value);
      |              ^~~~~~~~~~
hashmap.c:47:59: error: comparison between pointer and integer [-Werror]
   47 |   if (map->buckets[pos] == NULL || map->buckets[pos]->key == -1){
      |                                                           ^~
hashmap.c: In function ‘createMap’:
hashmap.c:66:3: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
   66 |   return;
      |   ^~~~~~
hashmap.c:62:11: note: declared here
   62 | HashMap * createMap(long capacity) {
      |           ^~~~~~~~~
hashmap.c:63:11: error: variable ‘mapa’ set but not used [-Werror=unused-but-set-variable]
   63 |   HashMap mapa;
      |           ^~~~
cc1: all warnings being treated as errors
Compilation failed
e252d3d
Wed 24 Apr 2024 10:16:42 PM UTC: 
 hashmap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:14: error: invalid initializer
   45 |   Pair par = createPair(key, value);
      |              ^~~~~~~~~~
hashmap.c:47:59: error: comparison between pointer and integer [-Werror]
   47 |   if (map->buckets[pos] == NULL || map->buckets[pos]->key == -1){
      |                                                           ^~
hashmap.c: In function ‘createMap’:
hashmap.c:63:3: error: conversion to non-scalar type requested
   63 |   HashMap* mapa = (HashMap) malloc (sizeof(mapa));
      |   ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0973f16
Wed 24 Apr 2024 10:17:05 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:14: error: invalid initializer
   45 |   Pair par = createPair(key, value);
      |              ^~~~~~~~~~
hashmap.c:47:59: error: comparison between pointer and integer [-Werror]
   47 |   if (map->buckets[pos] == NULL || map->buckets[pos]->key == -1){
      |                                                           ^~
hashmap.c: In function ‘createMap’:
hashmap.c:63:3: error: conversion to non-scalar type requested
   63 |   HashMap* mapa = (HashMap) malloc (sizeof(HashMap));
      |   ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e9379a9
Wed 24 Apr 2024 10:17:34 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:14: error: invalid initializer
   45 |   Pair par = createPair(key, value);
      |              ^~~~~~~~~~
hashmap.c:47:59: error: comparison between pointer and integer [-Werror]
   47 |   if (map->buckets[pos] == NULL || map->buckets[pos]->key == -1){
      |                                                           ^~
cc1: all warnings being treated as errors
Compilation failed
525cc46
Wed 24 Apr 2024 10:17:56 PM UTC: 
 hashmap.c | 18 +++++++++---------
 1 file changed, 9 insertions(+), 9 deletions(-)
 tests:  0|0
a6e9116
Thu 25 Apr 2024 02:24:30 AM UTC: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:69:10: error: unused variable ‘nuevoPar’ [-Werror=unused-variable]
   69 |   Pair** nuevoPar = (Pair**) malloc(sizeof(Pair*) * capacity);
      |          ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7361711
Thu 25 Apr 2024 02:25:07 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:69:10: error: variable ‘nuevoPar’ set but not used [-Werror=unused-but-set-variable]
   69 |   Pair** nuevoPar = (Pair**) malloc(sizeof(Pair*) * capacity);
      |          ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f9f1bcd
Thu 25 Apr 2024 02:26:24 AM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:69:10: error: unused variable ‘nuevoPar’ [-Werror=unused-variable]
   69 |   Pair** nuevoPar = (Pair**) malloc(sizeof(Pair*) * capacity);
      |          ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7f6cb21
